tdf#135368 change the mnemonic to point to our combobox replacement

Change-Id: Ib53b787399954e5be7e4b4080366fe64cc937de3